# sfml_platformer

./: .clang-format  CMakeLists.txt
include/common/: Config.hpp  Constants.hpp  Types.hpp
include/components/: AnimationComponent.hpp  Component.hpp  PhysicsComponent.hpp  PlayerController.hpp
include/game/: Game.hpp  GameObject.hpp  Platform.hpp  Player.hpp  World.hpp
src/: main.cpp
src/components/: AnimationComponent.cpp  Component.cpp  PhysicsComponent.cpp  PlayerController.cpp
src/game/: Game.cpp  GameObject.cpp  Platform.cpp  Player.cpp  World.cpp
